// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown heading should render heading1 correctly 1`] = `
<View
  style={Object {}}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    inMessage={false}
    level={1}
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 27,
          "lineHeight": 32,
        },
        Object {},
      ]
    }
  >
    A simple heading1
  </Text>
</View>
`;

exports[`Markdown heading should render heading2 correctly 1`] = `
<View
  style={Object {}}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    inMessage={false}
    level={2}
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 24,
          "lineHeight": 27,
        },
        Object {},
      ]
    }
  >
    A simple heading2
  </Text>
</View>
`;

exports[`Markdown heading should render heading3 correctly 1`] = `
<View
  style={Object {}}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    inMessage={false}
    level={3}
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 21,
          "lineHeight": 22,
        },
        Object {},
      ]
    }
  >
    A simple heading3
  </Text>
</View>
`;

exports[`Markdown list should render ordered list correctly 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Array [
        Object {},
        Object {},
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      inMessage={false}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      A simple ordered list:
1. Vue
2. React
3. Angular
    </Text>
  </View>
</View>
`;

exports[`Markdown list should render unordered list correctly 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Array [
        Object {},
        Object {},
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      inMessage={false}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      A simple unordered list:
* Vue
* React
* Angular
    </Text>
  </View>
</View>
`;

exports[`Markdown paragraph should render paragraph correctly 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Array [
        Object {},
        Object {},
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      inMessage={false}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      A simple paragraph.
    </Text>
  </View>
</View>
`;
